# robcalib

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
etc/: robcalib.conf  robcalib_hrp4.conf
include/robcalib/: calib_data.h  calib_json.h  calibration.hpp  cost_kinematics_chain.h  cost_link_eye.h  input_module.h  logging.h  maths.h  pose_adapters.h  ros_input_module.h  time_utils.h
src/: CMakeLists.txt  calib_data.cpp  calib_json.cpp  input_module.cpp  live_calib_node.cpp  logging.cpp  maths.cpp  ros_input_module.cpp  test_calib.cpp
tests/: CMakeLists.txt  fixture_kinematics.h  fixture_park.h  test_kinematics.cpp  test_link_eye.cpp
tests/data/hrp4_vrep/: README.md  angles_CHEST_P.csv  angles_CHEST_Y.csv  angles_NECK_P.csv  angles_NECK_Y.csv  angles_xtion_link_joint.csv  poses_xtion_link_joint.csv
